kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-api-service
  namespace: default
  labels:
    app: weather-api
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  type: ClusterIP
  selector:
    app: weather-api
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
  sessionAffinity: None
